# xinkong-home-public

./: .gitignore  LICENSE  README.md  README_cn.md  main.py  pyproject.toml
config/: config.example.yaml
docs/: architecture.md  github_publish_checklist.md  open_source_boundary.md  system_overview.md
examples/: simulated_run.py
src/xinkong_home/: __init__.py  adapters.py  app.py  config.py  factory.py  models.py  nlu.py  orchestrator.py  safety.py
tests/: test_public_skeleton.py
