[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xinkong-home-public"
version = "0.1.0"
description = "Public framework skeleton for the Xinkong Home RDK X5 AIoT assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[tool.setuptools.packages.find]
where = ["src"]

